k8s/int/apps/helios/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mino-helios
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  tls:
    - secretName: mino-helios-tls
      hosts: ["mino-helios-int.dev.gen6bk.com"]
  rules:
    - host: mino-helios-int.dev.gen6bk.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mino-helios
              servicePort: http
